Fixed gap on about author section for lower width devices and removed some text in the same section

--- a/queries.css
+++ b/queries.css
@@ -69,9 +69,11 @@
     width: 80%;
   }
   /* ABOUT AUTHOR SECTION */
+
   .section-about-author {
     grid-auto-flow: row;
     gap: 10rem;
+    margin: 0 auto 10rem auto;
   }
   .author {
     grid-row: 2;
